--- a/doc/release_notes.asciidoc
+++ b/doc/release_notes.asciidoc
@@ -26,6 +26,10 @@ ifdef::backend-docbook[]
 
 endif::backend-docbook[]
 
+== Release 2.65  ==
+
+* Fix minor Azure related issues
+
 == Release 2.64  ==
 
 * Azure DPDK/Failsafe PMD support see link:trex_appendix_azure.html[Azure DPDK support]
